--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,86 @@ background-position: center;
     margin-top: 50px;
     margin-right: 240px;
 }
+
+/* here starts the main */
+.images{
+    display: flex;
+}
+.feature-head{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.feature-text{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+.fimg-01-div{
+    border-radius: 300px 300px 0px 0px;
+background: rgba(167, 33, 98, 0.15);
+width: 464px;
+height: 538px;
+flex-shrink: 0;
+margin-left: 240px;
+margin-right: 24px;
+}
+.fimg-01{
+    width: 310px;
+height: 428px;
+flex-shrink: 0;
+margin: 110px 78px 0px 76px;
+}
+.fimg-02-div{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    width: 464px;
+height: 538px;
+flex-shrink: 0;
+margin-right: 24px;
+}
+.fimg-02{
+    width: 370px;
+height: 370px;
+margin: 117px 47px 51px 47px;
+}
+.fimg-03-div{
+    border-radius: 300px 300px 0px 0px;
+background: rgba(71, 125, 17, 0.15);
+width: 464px;
+height: 538px;
+}
+.fimg-03{
+    width: 314px;
+height: 471px;
+margin: 67px 75px 0px 75px;
+}
+.fimg-text-flex{
+    display: flex;
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: 35px;
+text-decoration-line: underline;
+}
+.fimg-flex-01{
+    margin: 32px 307px 128px 381px;
+}
+.fimg-flex-02{
+    margin: 32px 100px 128px 15px;
+}
+.fimg-flex-03{
+    margin: 32px 100px 128px 250px;
+}
+
