--- a/styles.css
+++ b/styles.css
@@ -242,3 +242,54 @@
     display: inline-block;
   vertical-align: middle;
 }
+
+/* insta section */
+
+.insta-section{
+    display: flex;
+background: #FFF;
+}
+.instagram{
+    border-top: 0;
+}
+.insta-head{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+margin: 128px 870px 24px 870px;
+}
+.insta-text{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+margin: 24px 663px 48px 663px;
+}
+
+
+.insta-flower{
+    display: flex;
+    margin-top: 0px;
+    display: flex;
+    align-items: center;
+}
+.insta-fl-01{
+   margin: 48px 24px 128px 240px;
+}
+
+.insta-fl-02{
+    margin: 48px 24px 128px 24px;
+}
+.insta-fl-03{
+    margin: 48px 24px 128px 24px;
+}
+.insta-fl-04{
+    margin: 48px 240px 128px 24px;
+}
