--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@
     width: 1922px;
     height: 620px;
     display: flex;
-    
+
 }
 
 .hot-deal {
@@ -240,56 +240,124 @@
     font-size: 20px;
     font-weight: 700;
     display: inline-block;
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 /* insta section */
 
-.insta-section{
+.insta-section {
     display: flex;
-background: #FFF;
+    background: #FFF;
 }
-.instagram{
+
+.instagram {
     border-top: 0;
 }
-.insta-head{
+
+.insta-head {
     color: #272727;
-text-align: center;
-font-family: Lato;
-font-size: 40px;
-font-style: normal;
-font-weight: 800;
-line-height: normal;
-margin: 128px 870px 24px 870px;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin: 128px 870px 24px 870px;
 }
-.insta-text{
+
+.insta-text {
     color: rgba(39, 39, 39, 0.60);
-text-align: center;
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
-margin: 24px 663px 48px 663px;
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin: 24px 663px 48px 663px;
 }
 
 
-.insta-flower{
+.insta-flower {
     display: flex;
     margin-top: 0px;
     display: flex;
     align-items: center;
 }
-.insta-fl-01{
-   margin: 48px 24px 128px 240px;
+
+.insta-fl-01 {
+    margin: 48px 24px 128px 240px;
 }
 
-.insta-fl-02{
+.insta-fl-02 {
     margin: 48px 24px 128px 24px;
 }
-.insta-fl-03{
+
+.insta-fl-03 {
     margin: 48px 24px 128px 24px;
 }
-.insta-fl-04{
+
+.insta-fl-04 {
     margin: 48px 240px 128px 24px;
+}
+
+/* CSS of latest deals */
+.latest-deals {
+    display: flex;
+    background-image: url(./images/Rectangle\ 9.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-around;
+    width: 1440px;
+    height: 449px;
+    flex-shrink: 0;
+    margin-left: 240px;
+}
+
+.deal-head {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin: 122px 534px 5px 533px;
+}
+
+.deal-text {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin: 0px 605px 48px 604px;
+
+}
+
+.deal-place {
+    width: 500px;
+    height: 40px;
+    border-radius: 8px;
+    background: #FFF;
+    margin: 30px 16px 121px 400px;
+
+}
+
+.deal-btn{
+    width: 150px;
+height: 46px;
+flex-shrink: 0;
+background: #E55473;
+border-radius: 8px;
+}
+.deal-btn-text{
+    color: #FFF;
+font-family: Lato;
+font-size: 20px;
+font-weight: 700;
+border: none;
 }
